# charting-lib

./: .gitignore  Daten.xlsx  README.md  blp-data.xlsx  pyproject.toml  requirements.txt
.github/: release-drafter.yml
.github/workflows/: ci.yml  publish-docs.yml  run-release-drafter.yml  sync-labels.yml
charting/: __init__.py  main.py  titles.py  update.py
charting/charts/: chart.py  time_series_chart.py
charting/data/: Subordinate.xlsx
charting/exception/: __init__.py
charting/model/: bond_filter.py  chart.py  curve_helper.py  metadata.py  orm_chart.py  style.py  transformer.py
charting/presentation/: __init__.py  ppt.py
charting/templates/: D&R Präsentation.pptm  D&R Präsentation.pptx  dr-template.pptm  monatsmappe-zinsen.json
charting/transformer/: __init__.py  avg.py  center.py  invert.py  lag.py  lead.py  pct.py  resample.py  threshold.py  transformer.py  ytd.py
charts/: update.py
charts/development/: US ISM Index vs ISM Numb. Man. Industries.py  cpi.py  eurozone.py  inflation.py  job_openings.py  loan.py  retail.py  revisions.py  spx.py  us_retail_sakes_nominal_vs_inflation_adjusted.py
charts/production/: 2y10y_yieldcurve.py  3m10y_yieldcurve.py  de_food_inflation.py  de_ifo_business_climate.py  de_ifo_hicp.py  eu_inflation_cpi_pmi.py  global_indeed_job_postings.py  threem_teny_yieldcurve.py  tw_export_yoy.py  us_consumer_credit_non_revolving.py  us_cpi_by_component.py  us_industrial_loan_tightening.py  us_job_openings_vs_unemployment.py  (+7 more)
examples/: __init__.py  cpi.py  cpi2.py  example.py  fred.py  inflation.py  loan.py  main.py  retail.py
(+456 files in other folders)
