[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "charting"
authors = [
    {name = "Donner & Reuschel Luxemburg S.A.", email = "info@donner-reuschel.lu"}
]
description = "project_description"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "readme", "dependencies"]

[tool.setuptools.packages]
find = { }

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "charting.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.package-data]
charting = ["templates/*.pptm", "charts/production/data/*"]